# doc-schema-extractor

./: .env.example  .gitignore  README.md  pyproject.toml
src/doc_schema_extractor/: __init__.py  audit_log.py  cli.py  extractor.py  logging_utils.py  models.py  rule_engine.py  streamlit_app.py  template_sanitiser.py  template_store.py  text_extractor.py  tracing.py  validator.py
src/doc_schema_extractor/backends/: __init__.py  base.py  ollama.py  openai_backend.py
templates/: delivery_note_ls_v1.json  food_order_ribella.json  lieferantenbestellungen_v1.json  order_confirmation.json  purchase_order_extraction_v1.json
tests/: test_rule_engine.py  test_template_store.py
