[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-schema-extractor"
version = "0.1.0"
description = "Template-guided PDF/XLSX extraction with LLM bootstrap and deterministic rule reuse"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anosh Bilimoria", email = "anoshbilimoria@gmail.com" }
]

dependencies = [
  # PDF parsing - MIT licensed
  "pdfplumber>=0.11",
  # XLSX - MIT licensed
  "openpyxl>=3.1",
  # Data validation - MIT licensed
  "pydantic>=2.7",
  # Fuzzy matching for fingerprinting - MIT licensed
  "rapidfuzz>=3.9",
  # OpenAI client - MIT licensed
  "openai>=1.30",
  # HTTP client for Ollama - MIT licensed
  "httpx>=0.27",
  # CLI
  "typer>=0.12",
  # Rich terminal output
  "rich>=13",
  # dotenv support
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
dse = "doc_schema_extractor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_schema_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
