[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-schema-extractor"
version = "0.2.0"
description = "Template-guided PDF/XLSX extraction with LLM bootstrap and deterministic rule reuse"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anosh Bilimoria", email = "anoshbilimoria@gmail.com" }
]

dependencies = [
  "pdfplumber>=0.11",
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "rapidfuzz>=3.9",
  "openai>=1.30",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1.0",
  "langsmith>=0.1.77",
  "langchain-core>=0.2.30",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
dse = "doc_schema_extractor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_schema_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
